package com.qwest.backend.domain.util;

public enum AmenityCategory {
    GENERAL_AMENITIES,
    ROOM_FEATURES,
    KITCHEN_DINING,
    BATHROOM_AMENITIES,
    LEISURE_RECREATION,
    ADDITIONAL_SERVICES,
    ENTERTAINMENT_OTHERS
}
