@startuml AmenityManagement

!includeurl https://raw.githubusercontent.com/plantuml-stdlib/C4-PlantUML/master/C4_Component.puml

skinparam linetype ortho

title Amenity Management Component Diagram for QWEST

package "Domain Models" {
    class Amenity {
        -Long id
        -String name
        -AmenityCategory category
    }

    enum AmenityCategory {
        GENERAL_AMENITIES, ROOM_FEATURES, KITCHEN_DINING, BATHROOM_AMENITIES, LEISURE_RECREATION, ADDITIONAL_SERVICES, ENTERTAINMENT_OTHERS
    }

    class StayListing {
        -Long id
        -Author author
        -LocalDate date
        -String title
        -String featuredImage
        -List<GalleryImage> galleryImages
        -Double reviewStart
        -Integer reviewCount
        -String country
        -String street
        -String roomNumber
        -String city
        -String state
        -String postalCode
        -PropertyType propertyType
        -RentalFormType rentalFormType
        -Double acreage
        -Integer maxGuests
        -Integer bedrooms
        -Integer beds
        -Integer bathrooms
        -Integer kitchens
        -String checkInHours
        -String checkOutHours
        -List<String> specialRestrictions
        -String accommodationDescription
        -Double weekdayPrice
        -Double weekendPrice
        -Double longTermStayDiscount
        -Integer minimumNights
        -Integer maximumNights
        -Double lat
        -Double lng
        -Set<Amenity> amenities
        -List<BookingCalendar> bookingCalendar
        -Set<Author> likedByAuthors
    }
}

package "Controllers" {
    class AmenityController {
        +createAmenity(AmenityDTO) : ResponseEntity<AmenityDTO>
        +getAllAmenities() : ResponseEntity<List<AmenityDTO>>
        +deleteAmenity(Long) : ResponseEntity<Void>
    }
}

package "Services" {
    interface AmenityService {
        +createAmenity(AmenityDTO) : AmenityDTO
        +deleteAmenity(Long) : void
        +getAllAmenities() : List<AmenityDTO>
    }

    class AmenityServiceImpl {
        -AmenityRepository amenityRepository
        -AmenityMapper amenityMapper
    }
}

package "Repositories" {
    interface AmenityRepository {
        +findAll() : List<Amenity>
        +findById(Long) : Optional<Amenity>
        +deleteById(Long) : void
    }
}

together {
    AmenityController --> AmenityService : uses
    AmenityServiceImpl --> AmenityRepository : uses
    AmenityServiceImpl --> AmenityMapper : uses

    StayListing --> Amenity : contains

    AmenityController --> Amenity : manages
    AmenityService --> Amenity : manages
    AmenityRepository --> Amenity : manages
}

@enduml
